[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitre-attack-mcp"
version = "1.0.0"
description = "MITRE ATT&CK matrix lookup, tactic/technique/sub-technique mapper, and incident-to-technique correlation for cyber defenders."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mitre", "attack", "tactics", "techniques", "stix", "threat-intel", "mcp", "mcp-server", "model-context-protocol", "ai-governance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/meok-ai-labs/mitre-attack-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
mitre-attack-mcp = "server:main"
